[tool.poetry]
name = "pythoneda-tenant-infrastructure-base"
version = "0.0.1a1"
description = "Infrastructure layer for pythoneda-tenant/base"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-tenant-infrastructure/base"
packages = [{include = "pythonedatenantinfrastructure"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-base = "^0.0.1a14"
pythoneda-tenant-base = "^0.0.1a1"
pythoneda-infrastructure-base = "^0.0.1a10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
